	routines.
	New form #1: after the libTIcalc: X.XX is the version of GtkTiLink
	New form #2: after the 3.14, an even number is a stable version 
	whereas an odd number is an unstable/devel version.
	New form #3: tilp (cables, calcs, tiffep) version.

Tips:
     cd working-copy
	svn export . ../tiemu-x.y
	
To do:
      UTF8 encoding pbs with gtk_refresh (label) under Windows.

- 29/06/2004, version 6.74 (3.8.6, 0.5.9, 4.5.3): roms
	Checked possible bugs reported on TI89 AMS 2.05 by Lionel Debroux <lionel_debroux@yahoo.fr>:
	- warning with PortTalk (mis-installed): not reproducted.
	- change settings set an error: not reproduced.
	- comm box: VTi and TiEmu cable were swapped, fixed.
	- pb of backup: not reproduced.

- 16/05/2004, version 6.73 (3.8.5, 0.5.9, 4.5.3): roms
	Added null cable support.
	Bug fix in the comm box.

- 24/04/2004, version 6.72 (3.8.4, 0.5.9, 4.5.3): roms
	Comm box improved: reset port when changing cable (avoid bad args).
	Added local GTK+ deprecation in toolbar.c (GTK+ 2.4, Gentoo).
	Bug fix (SilverLink Win32): string buffer in tilp_error too short.
	
- 08/04/2004, version 6.71 (3.8.1, 0.5.8, 4.5.3): roms
        Redirection of stdout/stderr by callbacks and minor improvements.
	Timeout has been increased to 30s instead of 10s during FLASH apps/os 
	sending	to avoid garbage collection.
	SilverLink/Win32 support is ok for all operations.
	SilverLink/Linux support is ok for all operations except sending OS.
	Bug: formatting of path in labels.c
	Bug: wrong handling of TIB files.
	Fixed many other bugs.
		
- 24/03/2004, version 6.70 (3.8.0, 0.5.7, 4.5.2): roms
	Added menu entry and mime types for KDE & Gnome.
	Bug fix: creation of the '/usr/lib/tilp' directory.
	Note: --enable-exit-homedir is on now !
	Bug: gdk_pixbuf_save requires error to be set on NULL.
	Added access to log file from menu.
	GUI clean-up.
	configure.in requires latest versions for _all_ libs. To be sure !
	
- 17/03/2004, version 6.69 (3.7.6, 0.5.6, 4.5.2): roms