@@ -16,6 +16,10 @@ Tips:
 To do:
       UTF8 encoding pbs with gtk_refresh (label) under Windows.
 
+- 02/07/2004, version 6.74b (3.8.6, 0.5.9, 4.5.3): roms 
+	Fixed a bug reported in the forum: TiLP crashes when parsing a folder which contains dots
+	(such as 'a1.2').
+
 - 29/06/2004, version 6.74 (3.8.6, 0.5.9, 4.5.3): roms
 	Checked possible bugs reported on TI89 AMS 2.05 by Lionel Debroux <lionel_debroux@yahoo.fr>:
 	- warning with PortTalk (mis-installed): not reproducted.
